# pyhton-postgres-logical-backup

./: .flake8  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
project/configs/: __init__.py
project/handlers/: backup.py
project/utils/: backup.py  database.py  s3.py
